@@ -4,4 +4,4 @@ JARPATH=%JARPATH%
 JAVAUNIXLIBPATH=%DJAVAUNIXLIBPATH%
 JAVAUNIXJARPATH=%DJAVAUNIXJARPATH%
 
-java -Djava.library.path=$JAVAUNIXLIBPATH -cp $JAVAUNIXJARPATH/unix.jar:$JARPATH/dbus.jar org.freedesktop.dbus.viewer.DBusViewer "$@"
+java -Djava.library.path=$JAVAUNIXLIBPATH -cp $JAVAUNIXJARPATH/unix.jar:$JAVAUNIXJARPATH/debug-enable.jar:$JAVAUNIXJARPATH/hexdump.jar:$JARPATH/dbus.jar org.freedesktop.dbus.bin.viewer.DBusViewer "$@"
