@@ -25,6 +25,7 @@ Version 2.0:
 	* add DBus.Peer interface to standard introspection data
 	* Document peer to peer and low level.
 	* Fix TCP and SHA-1 auth
+	* fix wrapper scripts with new depends
 
 Version 1.13:
 
